Add customize title and loader for app

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinity Scroll</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- Title -->
+    <h1>Unsplash API - Infinity Scroll</h1>
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="images/loader.svg" alt="Loader">
+    </div>
     <!-- Script -->
     <script src="js/script.js"></script>
 </body>
