--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Infinity Scroll</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
 
+    <script src="https://kit.fontawesome.com/29410186e4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinity Scroll</h1>
+    <h1>INSTA INFINITY</h1>
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
         <img src="images/loader.svg" alt="Loader">
